# MachineLearning_projects

./: README.md
CNN_land_cover_semantic_segmentation/: .dockerignore  .gitignore  README.md  pyproject.toml
CNN_land_cover_semantic_segmentation/configs/: base.yaml  full.yaml
CNN_land_cover_semantic_segmentation/configs/docker/: base.yaml  fast.yaml
CNN_land_cover_semantic_segmentation/docker/: Dockerfile.export-onnx  Dockerfile.inference-onnx  Dockerfile.inference-pytorch  Dockerfile.training  docker-compose.yml
CNN_land_cover_semantic_segmentation/src/land_cover_segmentation/: __init__.py  config.py
CNN_land_cover_semantic_segmentation/src/land_cover_segmentation/cli/: __init__.py  data.py  model.py  onnx.py
CNN_land_cover_semantic_segmentation/src/land_cover_segmentation/dataset/: augmentation.py  download.py  loveda.py
CNN_land_cover_semantic_segmentation/src/land_cover_segmentation/inference/: __init__.py  predict.py  tiling.py  write.py
CNN_land_cover_semantic_segmentation/src/land_cover_segmentation/models/: __init__.py  custom_model.py  factory.py
CNN_land_cover_semantic_segmentation/src/land_cover_segmentation/onnx_tools/: __init__.py  export.py  export_onnx.py  predict.py
CNN_land_cover_semantic_segmentation/src/land_cover_segmentation/training/: __init__.py  callbacks.py  checkpoint.py  evaluator.py  losses.py  metrics.py  trainer.py
CNN_land_cover_semantic_segmentation/src/land_cover_segmentation/utils/: __init__.py  data.py  general.py  model.py  runs.py  visualization.py
CNN_land_cover_semantic_segmentation/tests/: conftest.py  test_cli.py  test_config.py  test_inference.py  test_model.py
CNN_land_cover_semantic_segmentation/tests/test_dataset/: conftest.py  test_augmentation.py  test_download.py  test_loveda.py
CNN_land_cover_semantic_segmentation/tests/test_onnx_tools/: test_export_onnx.py  test_predict_onnx.py
CNN_land_cover_semantic_segmentation/tests/test_training/: test_callbacks.py  test_checkpoint.py  test_losses.py  test_metrics.py
CNN_land_cover_semantic_segmentation/tests/test_utils/: test_utils_data.py  test_utils_general.py  test_utils_model.py  test_utils_runs.py  test_utils_visualization.py
CloudAcademy/: 01-Regression-stock-full.ipynb  02-classification-stroke.ipynb
Floods/: Analysis.ipynb
House prices/: Sale_price_prediction.ipynb
Titanic/.ipynb_checkpoints/: Estimate_survival-checkpoint.ipynb
personal/land_cover_classification/: .gitignore  README.md  pyproject.toml
personal/land_cover_classification/configs/: base.yaml  custom.yaml  fast.yaml  full.yaml
personal/land_cover_classification/configs/docker/: base.yaml  fast.yaml
personal/land_cover_classification/docker/: Dockerfile.inference-onnx  docker-compose.yml
personal/land_cover_classification/src/land_cover_segmentation/: __init__.py  cli.py  config.py  run_artifacts.py  utils.py  visualization.py
personal/land_cover_classification/src/land_cover_segmentation/cli/: data.py  model.py  onnx.py
personal/land_cover_classification/src/land_cover_segmentation/dataset/: __init__.py  augmentation.py  download.py  loveda.py  transforms.py
personal/land_cover_classification/src/land_cover_segmentation/engine/: __init__.py  callbacks.py  evaluator.py  trainer.py
personal/land_cover_classification/src/land_cover_segmentation/inference/: __init__.py  predict.py  write.py
personal/land_cover_classification/src/land_cover_segmentation/models/: __init__.py  custom_model.py  factory.py
personal/land_cover_classification/src/land_cover_segmentation/onnx_tools/: __init__.py  predict.py
personal/land_cover_classification/src/land_cover_segmentation/training/: __init__.py  checkpoint.py  evaluator.py  losses.py  trainer.py
personal/land_cover_classification/src/land_cover_segmentation/utils/: __init__.py  data.py
personal/land_cover_classification/tests/: conftest.py  test_cli.py  test_config.py  test_engine.py  test_inference.py  test_model.py  test_utils.py  test_visualization.py
personal/land_cover_classification/tests/test_dataset/: conftest.py  test_loveda.py  test_transform.py
personal/land_cover_classification/tests/test_engine/: test_callbacks.py  test_checkpoint.py  test_losses.py  test_metrics.py
personal/land_cover_classification/tests/test_onnx_tools/: test_export_onnx.py  test_predict_onnx.py
personal/land_cover_classification/tests/test_training/: test_callbacks.py  test_checkpoint.py  test_losses.py  test_metrics.py
personal/land_cover_classification/tests/test_utils/: test_utils_general.py  test_utils_runs.py
