[project]
name = "land-cover-segmentation"
dynamic = ["version"]
description = "Semantic segmentation prototype for land cover (LoveDA)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "numpy>=1.26",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
data = [
    "torchgeo>=0.6",
]
training = [
    "land-cover-segmentation[data]",
    "torch>=2.2",
    "torchvision>=0.17",
    "segmentation-models-pytorch>=0.3.3",
    "albumentations>=1.4",
    "tqdm>=4.66",
]
evaluation = [
    "land-cover-segmentation[training]",
    "matplotlib>=3.8",
    "pillow>=10.2",
]
inference = [
    "torch>=2.2",
    "torchvision>=0.17",
    "segmentation-models-pytorch>=0.3.3",
    "rasterio>=1.3",
    "pillow>=10.2",
    "matplotlib>=3.8",
]
onnx-export = [
    "land-cover-segmentation[evaluation]",
    "onnx>=1.16",
]
onnx-inference = [
    "onnxruntime>=1.17",
    "rasterio>=1.3",
    "pillow>=10.2",
    "matplotlib>=3.8",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "ipykernel>=6.29",
    "jupyterlab>=4.0",
]

[tool.setuptools.dynamic]
version = { file = "VERSION" }

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
lcs = "land_cover_segmentation.cli:lcs"

[tool.uv]
package = true
default-groups = ["dev"]

[tool.uv.sources]
torch       = [{ index = "pytorch-cpu" }]
torchvision = [{ index = "pytorch-cpu" }]

[[tool.uv.index]]
name = "pytorch-cpu"
url  = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu121"
url  = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
