[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "land-cover-segmentation"
dynamic = ["version"]
description = "Production-prototype semantic segmentation for land cover (LoveDA)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2",
    "torchvision>=0.17",
    "segmentation-models-pytorch>=0.3.3",
    "torchgeo>=0.6",
    "albumentations>=1.4",
    "rasterio>=1.3",
    "numpy>=1.26",
    "scipy>=1.13",
    "scikit-learn>=1.4",
    "matplotlib>=3.8",
    "pyyaml>=6.0",
    "click>=8.1",
    "tqdm>=4.66",
    "pillow>=10.2",
]

[project.scripts]
land-cover-seg-download = "land_cover_segmentation.data.download:main"

[tool.uv]
package = true

[tool.uv.sources]
torch       = [{ index = "pytorch-cpu" }]
torchvision = [{ index = "pytorch-cpu" }]

[[tool.uv.index]]
name = "pytorch-cpu"
url  = "https://download.pytorch.org/whl/cpu"
explicit = true

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "ipykernel>=6.29",
    "jupyterlab>=4.0",
]

[tool.hatch.version]
path = "VERSION"
pattern = "(?P<version>.*)"

[tool.hatch.build.targets.wheel]
packages = ["src/land_cover_segmentation"]

[tool.pytest.ini_options]
testpaths = ["tests"]
