[project]
name = "land-cover-segmentation"
dynamic = ["version"]
description = "Production-prototype semantic segmentation for land cover (LoveDA)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2",
    "torchvision>=0.17",
    "segmentation-models-pytorch>=0.3.3",
    "torchgeo>=0.6",
    "albumentations>=1.4",
    "rasterio>=1.3",
    "numpy>=1.26",
    "scipy>=1.13",
    "scikit-learn>=1.4",
    "matplotlib>=3.8",
    "pyyaml>=6.0",
    "click>=8.1",
    "tqdm>=4.66",
    "pillow>=10.2",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "ipykernel>=6.29",
    "jupyterlab>=4.0",
]

[tool.setuptools.dynamic]
version = { file = "VERSION" }

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
lcs = "land_cover_segmentation.cli:lcs"

[tool.uv]
package = true

[tool.uv.sources]
torch       = [{ index = "pytorch-cpu" }]
torchvision = [{ index = "pytorch-cpu" }]

[[tool.uv.index]]
name = "pytorch-cpu"
url  = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
